<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--<item android:id="@+id/action_cadastro_usuarios"
        android:title="@string/usuarios"
        android:orderInCategory="100"
        app:showAsAction="never" />
    -->

    <item android:id="@+id/action_lista_animals"
        android:title="@string/title_activity_list_animals"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_lista_usuarios"
        android:title="@string/usuarios"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_lista_logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_lista_sair"
        android:title="@string/action_sair"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <!--
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    -->
    <item android:id="@+id/action_scanner"
        android:title="@string/action_scanner"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_mostrar_todos"
        android:title="@string/action_mostrar_todos"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

</menu>
