<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    tools:context="com.wordpress.marcellonascimento.detectoranimal.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:text="@string/login_txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/login_edtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/login_txtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"/>
            
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_ckbConectdo" 
            android:text="@string/login_ckbConectado"           
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/login_btnEntrar"
            android:text="@string/login_btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background = "#333"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:onClick="logar"/>
    </LinearLayout>

</ScrollView>
